feat: set auth refresh token in secured cookie
