# src/services/types.ts
@@ -1,0 +1,6 @@
+export type AuthTokens = {
+  accessToken: string;
+  accessTokenExpiresOn: number;
+  refreshToken: string;
+  refreshTokenExpiresOn: number;
+};
